--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -5,6 +5,9 @@ header {
     z-index: 0;
     position: sticky;
     top: 0;
+    -webkit-box-shadow: 0px 17px 80px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 17px 80px 0px rgba(0,0,0,0.75);
+box-shadow: 0px 17px 80px 0px rgba(0,0,0,0.75);
 }
 
 header nav {
