--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -66,10 +66,6 @@
     height: 0;
 }
 
-.featured-project-name-wrapper:hover {
-
-}
-
 .featured-project-name-wrapper p {
     color: white;
 }
@@ -77,6 +73,7 @@
 .featured-project-wrapper:hover {
     
     transform: scale(1.05);
+    z-index: -1;
 }
 
 #featured-projects-wrapper button {
